examples/test/testpolicy12809.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12809
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key22: value11
      key45: value31
      key40: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value26
          key35: value39
          key18: value11
